[package]
name = "node"
version = "0.0.0"
authors = ["GateOn"]

[dependencies]
exonum = "=0.9.2"
exonum-time = "=0.9.2"
exonum-configuration = "=0.9.2"
failure = "0.1.2"
clap = "2.25.0"
tempdir = "0.3.5"
env_logger = "0.4.3"
log = "0.3.8"
serde = "1.0.10"
serde_derive = "1.0.10"
serde_json = "1.0"
lazy_static = "1.0.0"
router = "0.6.0"
iron = "0.6.0"
bodyparser = "0.8.0"
params = "0.8.0"
hyper = "*"
chrono = "=0.4.4"
